# pvpgn-svn

d2pack109/trunk/: CREDITS
d2pack109/trunk/conf/: d2cs.conf.in
d2pack109/trunk/src/: Makefile.in  configure.in
d2pack109/trunk/src/autoconf/: config.sub
d2pack109/trunk/src/common/: bnet_protocol.h  eventlog.c  init_protocol.h  network.c  packet.c  packet.h  rlimit.c  setup_before.h
d2pack109/trunk/src/d2cs/: Makefile  bnetd.c  cmdline_parse.c  conf.c  connection.c  connection.h  d2charfile.c  d2gs.c  d2gstrans.c  d2gstrans.h  d2ladder.c  game.c  gamequeue.c  handle_bnetd.c  handle_d2cs.c  handle_d2gs.c  handle_init.c  handle_signal.c  main.c  net.c  prefs.c  prefs.h  s2s.c  server.c  server.h  setup.h  xstring.c  xstring.h
d2pack109/trunk/src/d2dbs/: cmdline_parse.c  d2ladder.c  dbserver.c  dbserver.h  dbspacket.c  handle_signal.c  main.c  prefs.c  setup.h
files/trunk/: tos.txt
